test/spec_vectors/simd_i8x16_cmp/fail/module_23.wat
(module (func $i8x16.le_u-arg-empty (result v128) (i8x16.le_u)))